fix: Changed md-editor code scrollbars to thin

--- a/client/src/styles.module.scss
+++ b/client/src/styles.module.scss
@@ -36,6 +36,10 @@
       font-size: 14px;
     }
 
+    .wmde-markdown>pre>code {
+      scrollbar-width: thin;
+    }
+
     .wmde-markdown>p {
       white-space: pre-wrap;
     }
